Fix carousel arrow centering - move down to visible center
- Changed calc(50% - 25px) to calc(50% + 40px) for tablet
- Changed calc(50% - 30px) to calc(50% + 35px) for mobile
- Arrows now centered in visible area (below navbar to bottom of image)

--- a/css/style.css
+++ b/css/style.css
@@ -2219,7 +2219,7 @@ body {
         width: 48px;
         height: 48px;
         border-radius: 50%;
-        top: calc(50% - 25px);
+        top: calc(50% + 40px);
     }
 
     .carousel-arrow i {
@@ -2563,7 +2563,7 @@ body {
         width: 42px;
         height: 42px;
         border-radius: 50%;
-        top: calc(50% - 30px);
+        top: calc(50% + 35px);
     }
 
     .carousel-arrow i {
